--- a/templates/board.html
+++ b/templates/board.html
@@ -395,6 +395,27 @@
                                     </div>
                                 </div>
 
+                                {% if thread.reply_list|length > 1 %}
+                                    <div class="h-fit w-fit gap-2">
+                                        <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
+                                            id="t{{ thread.id }}-justify" 
+                                            class="d-flex justify-content-center align-items-center btn p-1" 
+                                            style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                            
+                                            <!-- Line 1 -->
+                                            <div class="position-absolute bg-white" 
+                                                style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                            <!-- Line 2 -->
+                                            <div class="position-absolute bg-white" 
+                                                style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                            <!-- Line 3 -->
+                                            <div class="position-absolute bg-white" 
+                                                style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                    
+                                        </button>
+                                    </div>
+                                {% endif %}
+
                                 {% if thread.reply_list|length > 5 %}
                                     <div class="d-flex gap-2">
                                         <button onclick="showAll('t{{ thread.id }}-all', 't{{ thread.id }}-btn', 't{{ thread.id }}-link', '{{ thread.user_token}}')" 
@@ -502,6 +523,28 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        {% if thread.reply_list|length > 1 %}
+                                            <div class="h-fit w-fit gap-2">
+                                                <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
+                                                    id="t{{ thread.id }}-justify" 
+                                                    class="d-flex justify-content-center align-items-center btn p-1" 
+                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    
+                                                    <!-- Line 1 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 2 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 3 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                            
+                                                </button>
+                                            </div>
+                                        {% endif %}
+                                        
                                     
                                         {% if thread.reply_list|length > 5 %}
                                             <div class="d-flex gap-2">
@@ -611,6 +654,27 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        {% if thread.reply_list|length > 1 %}
+                                            <div class="h-fit w-fit gap-2">
+                                                <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
+                                                    id="t{{ thread.id }}-justify" 
+                                                    class="d-flex justify-content-center align-items-center btn p-1" 
+                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    
+                                                    <!-- Line 1 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 2 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 3 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                            
+                                                </button>
+                                            </div>
+                                        {% endif %}
                                         
                                         {% if thread.reply_list|length > 5 %}
                                             <div class="d-flex gap-2">
@@ -712,6 +776,27 @@
                                                 </div>
                                             </div>
                                         </div>
+
+                                        {% if thread.reply_list|length > 1 %}
+                                            <div class="h-fit w-fit gap-2">
+                                                <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
+                                                    id="t{{ thread.id }}-justify" 
+                                                    class="d-flex justify-content-center align-items-center btn p-1" 
+                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    
+                                                    <!-- Line 1 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 2 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                    <!-- Line 3 -->
+                                                    <div class="position-absolute bg-white" 
+                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                            
+                                                </button>
+                                            </div>
+                                        {% endif %}
 
                                         {% if thread.reply_list|length > 5 %}
                                             <div class="d-flex gap-2">
