--- a/templates/board.html
+++ b/templates/board.html
@@ -57,7 +57,7 @@
                     <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <form class="d-flex flex-column gap-2" method="POST" action="/thread" enctype="multipart/form-data" id="thread-form">
+                        <form class="d-flex flex-column gap-2" method="POST" action="/thread?page={{ page }}&api_key={{ api_key }}" enctype="multipart/form-data" id="thread-form">
                             <div>
                                 <label class="d-flex gap-1 align-items-center fst-italic text-white m-0" style="max-width: 800px; font-size: 0.8rem; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">
                                     Thread title:
@@ -400,17 +400,17 @@
                                         <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
                                             id="t{{ thread.id }}-justify" 
                                             class="d-flex justify-content-center align-items-center btn p-1" 
-                                            style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                            style="width: 16px; height: 16px; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
                                             
                                             <!-- Line 1 -->
                                             <div class="position-absolute bg-white" 
-                                                style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                style="width: 0.4rem; height: 2px; top: 3px; left: 2px;"></div>
                                             <!-- Line 2 -->
                                             <div class="position-absolute bg-white" 
-                                                style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                style="width: 0.4rem; height: 2px; top: 6px; left: 4px;"></div>
                                             <!-- Line 3 -->
                                             <div class="position-absolute bg-white" 
-                                                style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                                style="width: 0.4rem; height: 2px; top: 9px; left: 6px;"></div>
                                     
                                         </button>
                                     </div>
@@ -529,17 +529,17 @@
                                                 <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
                                                     id="t{{ thread.id }}-justify" 
                                                     class="d-flex justify-content-center align-items-center btn p-1" 
-                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    style="width: 16px; height: 16px; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
                                                     
                                                     <!-- Line 1 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 3px; left: 2px;"></div>
                                                     <!-- Line 2 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 6px; left: 4px;"></div>
                                                     <!-- Line 3 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 9px; left: 6px;"></div>
                                             
                                                 </button>
                                             </div>
@@ -660,17 +660,17 @@
                                                 <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
                                                     id="t{{ thread.id }}-justify" 
                                                     class="d-flex justify-content-center align-items-center btn p-1" 
-                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    style="width: 16px; height: 16px; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
                                                     
                                                     <!-- Line 1 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 3px; left: 2px;"></div>
                                                     <!-- Line 2 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 6px; left: 4px;"></div>
                                                     <!-- Line 3 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 9px; left: 6px;"></div>
                                             
                                                 </button>
                                             </div>
@@ -782,17 +782,17 @@
                                                 <button onclick="justifyLeft('t{{ thread.id }}-justify', {{thread.id}})" 
                                                     id="t{{ thread.id }}-justify" 
                                                     class="d-flex justify-content-center align-items-center btn p-1" 
-                                                    style="width: 1rem; height: 1rem; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                                    style="width: 16px; height: 16px; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
                                                     
                                                     <!-- Line 1 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 30%; left: 35%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 3px; left: 2px;"></div>
                                                     <!-- Line 2 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 50%; left: 50%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 6px; left: 4px;"></div>
                                                     <!-- Line 3 -->
                                                     <div class="position-absolute bg-white" 
-                                                        style="width: 0.4rem; height: 2px; top: 70%; left: 65%; transform: translate(-50%, -50%);"></div>
+                                                        style="width: 0.4rem; height: 2px; top: 9px; left: 6px;"></div>
                                             
                                                 </button>
                                             </div>
