Small CSS fixes

--- a/templates/board.html
+++ b/templates/board.html
@@ -255,7 +255,7 @@
                         <p class="chan-text-content" style="min-height: {{'1.5rem' if reply.image else '2.5rem'}};">{{ reply.content|safe }}</p>
 
                         {% if reply.image %}
-                            <div class="d-flex flex-column justify-content-center" style="width: 30%;" id="img-div-r{{ reply.id }}">
+                            <div class="d-flex flex-column justify-content-center" style="width: 8.5rem;" id="img-div-r{{ reply.id }}">
                                 <img class="rounded-1" style="width: 100%; height: auto; max-height: 400px;" src="{{ url_for('Images.Image', id=reply.image.id) }}" onclick="maxOrMin({{ reply.id }}, 'r')">
                                 <div class="d-flex gap-1">
                                     <span style="font-size: 0.7rem; color: #696969;" class="m-0">File: </span>
