--- a/templates/thread.html
+++ b/templates/thread.html
@@ -236,9 +236,9 @@
 
 
             {% if thread.type == 1 %}
-                <div class="d-flex w-100 gap-1 overflow-x-auto" id="img-div-t{{ thread.id }} style="max-width: 100vw;">
+                <div class="d-flex w-100 gap-1 overflow-x-auto" id="img-div-t{{ thread.id }}" style="max-width: 100vw;">
                     {% if thread.image %}
-                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
+                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content;">
                             <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
                             <div class="d-flex gap-1">
                                 <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
@@ -247,50 +247,72 @@
                             <p style="font-size: 0.7rem; color: #696969;" class="m-0 p-0">({{ (thread.image.size|int / 1024)|int }}KB {{ thread.image.measures }})</p>                    
                         </div>
                     {% endif %}
+                    
                     <div class="d-flex flex-column gap-1 w-100">
                         
-                        <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 350px; width: fit-content; min-width: 200px;">
-                            <div class="d-flex gap-2">
-                                <p class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" style="font-weight: 500; text;">{{ thread.title }}</p>
-                                <div class="d-flex flex-column justify-content-around">
-                                    <div class="d-flex align-items-center gap-1">
-                                        <p class="m-0" style="font-size: 0.7rem; color: rgba(0, 255, 136);"><span class="fw-bold">Admin:</span></p>
-                                        <p class="m-0 text-ellipsis" style="font-size: 0.7rem !important; color: rgba(255, 255, 255, 0.700);">{{ thread.user_token }}</p>
-                                        <img style="width: 15px; height: 15px;" src="{{ url_for('static', filename='pi.svg') }}" alt="">
+                        <div class="d-flex align-items-end gap-1">
+                            <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 350px; width: fit-content; min-width: 200px;">
+                                <div class="d-flex gap-2">
+                                    <p class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" style="font-weight: 500; text;">{{ thread.title }}</p>
+                                    <div class="d-flex flex-column justify-content-around">
+                                        <div class="d-flex align-items-center gap-1">
+                                            <p class="m-0" style="font-size: 0.7rem; color: rgba(0, 255, 136);"><span class="fw-bold">Admin:</span></p>
+                                            <p class="m-0 text-ellipsis" style="font-size: 0.7rem !important; color: rgba(255, 255, 255, 0.700);">{{ thread.user_token }}</p>
+                                            <img style="width: 15px; height: 15px;" src="{{ url_for('static', filename='pi.svg') }}" alt="">
+                                        </div>
+                                        <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
                                     </div>
-                                    <p class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">Thread No.{{ thread.id }}</p>      
                                 </div>
-                            </div>
 
-                            <p class="chan-text-content">{{ thread.content|safe }}</p>
+                                <p class="chan-text-content">{{ thread.content|safe }}</p>
 
-                            <div class="d-flex justify-content-between">
-                                <div class="d-flex gap-1">
-                                    <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
-                                        {{ '%02d' | format(thread.date.day) }}/{{ '%02d' | format(thread.date.month) }}/{{ thread.date.year }}
-                                    </p>
-                                    <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
-                                    <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">{{ thread.time }}</p>
-                                    <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">UTC</p>    
-                                </div>
-                                <div class="d-flex justify-content-center gap-1">
-                                    <button onclick="submitVote(1, {{ thread.id }}, 't')" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="<span class='vote-tooltip'>{{ thread.votes|selectattr('up_or_down', 'equalto', 1)|list|length }}</span>" class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
-                                        <i class="fa-solid fa-caret-up px-1" id="1t{{ thread.id }}" style="font-size: 0.9rem; padding-top: 0.15rem; background-color: rgba(0, 153, 255, 0.2); border-radius: 3px; height: fit-content;"></i>
-                                    </button>
-                                    <button onclick="submitVote(0, {{ thread.id }}, 't')" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="<span class='vote-tooltip'>{{ thread.votes|selectattr('up_or_down', 'equalto', 0)|list|length }}</span>" class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
-                                        <i class="fa-solid fa-caret-down px-1" id="0t{{ thread.id }}" style="font-size: 0.9rem; padding-bottom: 0.15rem; background-color: rgba(255, 78, 78, 0.2); border-radius: 3px; height: fit-content;"></i>
-                                    </button>
-                                    <button class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(0, 255, 89, 0.1); border-radius: 3px;" onclick="replyModal('t{{ thread.id }}')" type="button" data-bs-toggle="modal" data-bs-target="#newReply">
-                                        <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
-                                        <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
-                                    </button>
-                                    {% if api_key %}
-                                        <button onclick="deletePost({{ thread.id }}, 't')" class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(243, 35, 35, 0.2); border-radius: 3px;" type="button">
-                                            <i style="font-size: 0.7rem;" class="fa-solid fa-eraser"></i>
-                                            <p style="font-size: 0.7rem;" class="m-0">Delete</p>   
+                                <div class="d-flex justify-content-between">
+                                    <div class="d-flex gap-1">
+                                        <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
+                                            {{ '%02d' | format(thread.date.day) }}/{{ '%02d' | format(thread.date.month) }}/{{ thread.date.year }}
+                                        </p>
+                                        <hr class="m-0 h-100" style="width: 1px; border-left: solid 1px;">
+                                        <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">{{ thread.time }}</p>
+                                        <p class="m-0" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">UTC</p>    
+                                    </div>
+                                    <div class="d-flex justify-content-center gap-1">
+                                        <button onclick="submitVote(1, {{ thread.id }}, 't')" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="<span class='vote-tooltip'>{{ thread.votes|selectattr('up_or_down', 'equalto', 1)|list|length }}</span>" class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
+                                            <i class="fa-solid fa-caret-up px-1" id="1t{{ thread.id }}" style="font-size: 0.9rem; padding-top: 0.15rem; background-color: rgba(0, 153, 255, 0.2); border-radius: 3px; height: fit-content;"></i>
                                         </button>
-                                    {% endif %}
+                                        <button onclick="submitVote(0, {{ thread.id }}, 't')" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="top" title="<span class='vote-tooltip'>{{ thread.votes|selectattr('up_or_down', 'equalto', 0)|list|length }}</span>" class="d-flex p-0 border-0 bg-transparent text-white" style="height: fit-content;">
+                                            <i class="fa-solid fa-caret-down px-1" id="0t{{ thread.id }}" style="font-size: 0.9rem; padding-bottom: 0.15rem; background-color: rgba(255, 78, 78, 0.2); border-radius: 3px; height: fit-content;"></i>
+                                        </button>
+                                        <button class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(0, 255, 89, 0.1); border-radius: 3px;" onclick="replyModal('t{{ thread.id }}')" type="button" data-bs-toggle="modal" data-bs-target="#newReply">
+                                            <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
+                                            <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
+                                        </button>
+                                        {% if api_key %}
+                                            <button onclick="deletePost({{ thread.id }}, 't')" class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(243, 35, 35, 0.2); border-radius: 3px;" type="button">
+                                                <i style="font-size: 0.7rem;" class="fa-solid fa-eraser"></i>
+                                                <p style="font-size: 0.7rem;" class="m-0">Delete</p>   
+                                            </button>
+                                        {% endif %}
+                                    </div>
                                 </div>
+                                
+                            </div>
+                            <div class="h-fit w-fit gap-2 d-none" id="justify-button">
+                                <button onclick="justifyLeftThread('t{{ thread.id }}-justify', {{thread.id}})" 
+                                    id="t{{ thread.id }}-justify" 
+                                    class="d-flex justify-content-center align-items-center btn p-1" 
+                                    style="width: 16px; height: 16px; position: relative; border-radius: 2px; border: solid 1px rgb(139, 243, 203) !important; background: rgba(139, 243, 203, 0.2);">
+                                    
+                                    <!-- Line 1 -->
+                                    <div class="position-absolute bg-white" 
+                                        style="width: 6px; height: 2px; top: 3px; left: 2px;"></div>
+                                    <!-- Line 2 -->
+                                    <div class="position-absolute bg-white" 
+                                        style="width: 6px; height: 2px; top: 6px; left: 4px;"></div>
+                                    <!-- Line 3 -->
+                                    <div class="position-absolute bg-white" 
+                                        style="width: 6px; height: 2px; top: 9px; right: 2px;"></div>
+                                </button>
+
                             </div>
                         </div>
                         {% if thread.replies.count() > 0 %}
